--- a/client/src/pages/auth/Register.module.css
+++ b/client/src/pages/auth/Register.module.css
@@ -1,32 +1,31 @@
-/* Register.css */
+/* Register.module.css */
 
-.register-container {
+.registerContainer {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     background-color: #f5f5f5;
     width: 100%;
-}
-
-.container {
+  }
+  
+  .containerRegister {
     width: 65vw;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     border-radius: 8px;
     overflow: hidden;
-}
-
-.register-image {
+  }
+  
+  .registerImage {
     flex: 1;
     padding: 20px;
     text-align: center;
     background-color: #007bff;
     color: #fff;
-}
-/* Register.css */
-
-.register-image {
+  }
+  
+  .registerImage {
     flex-basis: 30%;
     background-image: url("../src/assets/images/tech.jpg");
     background-size: cover;
@@ -34,63 +33,64 @@
     border-radius: 8px 0 0 8px;
   }
   
-
-.register-image img {
+  .registerImage img {
     max-width: 70%;
     height: auto;
-}
-
-.register-form {
+    object-fit: cover;
+  }
+  
+  .registerForm {
     flex: 1;
     padding: 20px;
     background-color: #fff;
     border-radius: 0 8px 8px 0;
-}
-
-.register-form h2 {
+  }
+  
+  .registerForm h2 {
     font-size: 24px;
     margin-bottom: 20px;
-}
-
-.form-group {
+  }
+  
+  .formGroupRegister {
     margin-bottom: 20px;
-}
-
-.form-group label {
+  }
+  
+  .formGroupRegister label {
     display: block;
     font-size: 16px;
     margin-bottom: 8px;
     text-align: justify;
-}
-
-.form-group input {
+  }
+  
+  .formGroupRegister input {
     width: 95%;
     padding: 7px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-}
-
-.form-link{
+  }
+  
+  .formLink {
     text-align: initial;
     margin-top: 10px;
     margin-left: 20px;
-}
-.form-link span,
-.form-link a{
+  }
+  
+  .formLink span,
+  .formLink a {
     font-size: 14px;
     font-weight: 400;
     color: #232836;
-}
-
-.register-form h2 {
+  }
+  
+  .registerForm h2 {
     font-size: 24px;
     margin-bottom: 20px;
     border-bottom: 2px solid;
     border-bottom-color: tomato;
-}
-
-button {
+  }
+  
+  .buttonRegister {
     padding: 7px 95px !important;
     border: none;
     border-radius: 4px;
@@ -99,28 +99,34 @@ button {
     background-color: rgba(32, 31, 31, 0.801)!important;
     color: white !important;
     min-width: 350px;
-}
-
-button:hover {
+  }
+  
+  .buttonRegister:hover {
     background-color: #000;
     color: #fff;
-}
+  }
 
-/* Register.css */
+  .profilePicturePreview {
+    width: 100px; /* Set the width you desire */
+    height: 100px; /* Set the height you desire */
+    overflow: hidden;
+    border-radius: 50%; /* To make it rounded */
+    margin: 0 auto; /* Center the image horizontally */
+    background-color: #f0f0f0; /* Optional: Add a background color */
+  }
+  
+  .profilePicturePreview img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and cover the entire div */
+    object-position: center center; /* Center the image within the div */
+    border-radius: 50%; /* Ensure the image is rounded */
+  }
 
-.profile-picture-preview {
-  width: 100px; /* Set the width you desire */
-  height: 100px; /* Set the height you desire */
-  overflow: hidden;
-  border-radius: 50%; /* To make it rounded */
-  margin: 0 auto; /* Center the image horizontally */
-  background-color: #f0f0f0; /* Optional: Add a background color */
-}
-
-.profile-picture-preview img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Maintain aspect ratio and cover the entire div */
-  object-position: center center; /* Center the image within the div */
-  border-radius: 50%; /* Ensure the image is rounded */
-}
+  .Error {
+    border-bottom: 1px red;
+    color: red;
+  }
+  
+  /* ... Your other styles ... */
+  
